# ConstellationA2A

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: audit.yml  ci.yml
agents/: base.Dockerfile  common.py
agents/coder/: Dockerfile  agent.py
agents/coordinator/: Dockerfile  agent.py
agents/researcher/: Dockerfile  agent.py
cli/: constellation_cli.py
conduit/: Dockerfile  conduit-hardened.toml  conduit.toml
crates/constellation-a2a/: Cargo.toml
crates/constellation-a2a/src/: card.rs  error.rs  lib.rs  rpc.rs  task.rs
crates/constellation-a2a/tests/: conformance.rs
crates/constellation-a2a/tests/fixtures/: agent_card.json  tasks_get_response.json  tasks_send_request.json
crates/constellation-cli/: Cargo.toml
crates/constellation-cli/assets/: constellation.service.tmpl
crates/constellation-cli/src/: config.rs  main.rs  net.rs  prompt.rs
crates/constellation-cli/src/commands/: card.rs  inbox.rs  init.rs  install_service.rs  mod.rs  peers.rs  respond.rs  send.rs  serve.rs  wait.rs
crates/constellation-cli/tests/: cli_smoke.rs  two_peer_loopback.rs
crates/constellation-client/: Cargo.toml
crates/constellation-client/src/: lib.rs
crates/constellation-client/tests/: client_tests.rs
crates/constellation-discovery/: Cargo.toml
crates/constellation-discovery/src/: lib.rs  mdns.rs  probe.rs  tailscale.rs
crates/constellation-discovery/tests/: probe_tests.rs  tailscale_parse_tests.rs
crates/constellation-server/: Cargo.toml
crates/constellation-server/src/: lib.rs  rpc.rs  state.rs  well_known.rs
crates/constellation-server/tests/: rpc_tests.rs
crates/constellation-store/: Cargo.toml
crates/constellation-store/src/: lib.rs  peers.rs  schema.rs  tasks_in.rs  tasks_out.rs
crates/constellation-store/tests/: store_tests.rs
docs/: SECURITY.md  setup-prompt.md
docs/specs/: 2026-03-26-constellation-a2a-design.md
docs/superpowers/plans/: 2026-04-29-constellation-rust-a2a.md
docs/superpowers/specs/: 2026-04-29-constellation-rust-a2a-design.md
scripts/: health-check.sh  register-agents.sh  security-check.sh  setup.sh
sdk/: Cargo.toml
sdk/constellation-core/: Cargo.toml
sdk/constellation-core/src/: agent.rs  config.rs  error.rs  lib.rs  message.rs  room.rs  task.rs
sdk/constellation-py/: Cargo.toml  pyproject.toml
sdk/constellation-py/src/: lib.rs
tests/integration/: run_tests.sh  test_agent_messaging.sh  test_conduit.sh
