[package]
name = "constellation-client"
description = "A2A JSON-RPC HTTP client for Constellation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
constellation-a2a = { path = "../constellation-a2a" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }
chrono = { workspace = true }
