[package]
name = "constellation-discovery"
description = "Tailscale + mDNS peer discovery for Constellation A2A"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
constellation-a2a = { path = "../constellation-a2a" }
futures-util = { workspace = true }
mdns-sd = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
url = { workspace = true }
