[package]
name = "constellation-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
constellation-a2a = { path = "../constellation-a2a" }

[dev-dependencies]
tempfile = { workspace = true }
url = { workspace = true }
