[package]
name = "constellation-core"
version = "0.1.0"
edition = "2021"
description = "Core Rust SDK for Constellation A2A agent-to-agent communication over Matrix"
license = "MIT"

[dependencies]
matrix-sdk = { version = "0.7", features = ["e2e-encryption", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
