[package]
name = "constellation-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Constellation A2A SDK via PyO3"
license = "MIT"

[lib]
name = "constellation"
crate-type = ["cdylib"]

[dependencies]
constellation-core = { path = "../constellation-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
